--- a/Haoqi/part_2.ipynb
+++ b/Haoqi/part_2.ipynb
@@ -18,7 +18,11 @@
     "import numpy as np\n",
     "from scipy.optimize import linear_sum_assignment\n",
     "\n",
-    "# Alpha-Beta Filter\n",
+    "def load_obj_each_frame(data_file):\n",
+    "    with open(data_file, 'r') as file:\n",
+    "        frame_dict = json.load(file)\n",
+    "    return frame_dict\n",
+    "\n",
     "class AlphaBetaFilter:\n",
     "    def __init__(self, alpha, beta, dt):\n",
     "        self.alpha = alpha\n",
@@ -35,17 +39,11 @@
     "        velocity = (self.beta * residual) / self.dt\n",
     "        return position, velocity\n",
     "\n",
-    "# Calculate centroid of a bounding box\n",
+    "# Calculate the centroid of a bounding box\n",
     "def calculate_centroid(x_min, y_min, width, height):\n",
     "    return np.array([x_min + width / 2, y_min + height / 2])\n",
     "\n",
-    "# Load frame data from JSON file\n",
-    "def load_obj_each_frame(data_file):\n",
-    "    with open(data_file, 'r') as file:\n",
-    "        frame_dict = json.load(file)\n",
-    "    return frame_dict\n",
-    "\n",
-    "# Tracking and ID assignment\n",
+    "# Track and assign IDs to objects\n",
     "def track_objects(frame_dict):\n",
     "    tracked_objects = []\n",
     "    next_id = 0\n",
@@ -53,7 +51,7 @@
     "\n",
     "    for frame, detections in frame_dict.items():\n",
     "        centroids = [calculate_centroid(obj['x_min'], obj['y_min'], obj['width'], obj['height']) for obj in detections]\n",
-    "        centroids_np = np.array(centroids)  # Convert centroids list to a NumPy array\n",
+    "        centroids_np = np.array(centroids) \n",
     "\n",
     "        if not tracked_objects:  # Initialize tracked objects in the first frame\n",
     "            for obj in detections:\n",
@@ -160,19 +158,23 @@
     }
    ],
    "source": [
-    "# Main workflow\n",
     "data_file = 'frame_dict.json'\n",
     "frame_dict = load_obj_each_frame(data_file)\n",
-    "frame_dict_with_ids = track_objects(frame_dict)  # Assign unique IDs\n",
+    "frame_dict_with_ids = track_objects(frame_dict) \n",
     "\n",
     "with open('part_2_frame_dict.json', 'w', encoding='utf-8') as file:\n",
     "    json.dump(frame_dict_with_ids, file, ensure_ascii=False, indent=None)\n",
     "\n",
-    "print(\"Position were saved as part_2_frame_dict.json\")\n",
+    "print(\"Successfully saved in part_2_frame_dict.json!\")\n",
     "\n",
     "video_file = \"commonwealth.mp4\"\n",
     "draw_objects_in_video(video_file, frame_dict_with_ids)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -275,8 +277,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "CS585",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
