--- a/Haoqi/part_2.ipynb
+++ b/Haoqi/part_2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,33 +25,28 @@
     "class State:\n",
     "    def __init__(self, cost_matrix):\n",
     "        self.cm = cost_matrix.copy()\n",
-    "\n",
-    "        n, m = self.cm.shape\n",
-    "        self.row_uncovered = np.ones(n, dtype=bool)\n",
-    "        self.col_uncovered = np.ones(m, dtype=bool)\n",
-    "        self.marked = np.zeros((n, m), dtype=int)   # 1: starred, 2: primed\n",
-    "        self.Z0_r = 0\n",
-    "        self.Z0_c = 0\n",
-    "        self.path = np.zeros((n + m, 2), dtype=int)\n",
-    "\n",
-    "    def clean_covers(self):\n",
-    "        self.row_uncovered[:] = True\n",
-    "        self.col_uncovered[:] = True\n",
+    "        self.n, self.m = self.cm.shape\n",
+    "        \n",
+    "        self.row_uncovered = np.ones(self.n, dtype=bool)\n",
+    "        self.col_uncovered = np.ones(self.m, dtype=bool)\n",
+    "        self.marked = np.zeros((self.n, self.m), dtype=int) # 1: starred, 2: primed\n",
+    "        self.pr = 0\n",
+    "        self.pc = 0\n",
     "\n",
     "def step6(state):\n",
     "    if np.any(state.row_uncovered) and np.any(state.col_uncovered):\n",
-    "        minval = np.min(state.cm[state.row_uncovered], axis=0)\n",
-    "        minval = np.min(minval[state.col_uncovered])\n",
+    "        minval = np.min(state.cm[state.row_uncovered][:, state.col_uncovered])\n",
     "        state.cm[~state.row_uncovered] += minval\n",
     "        state.cm[:, state.col_uncovered] -= minval\n",
     "    return step4\n",
     "\n",
     "def step5(state):\n",
     "    count = 0\n",
-    "    path = state.path\n",
-    "    path[count, 0] = state.Z0_r\n",
-    "    path[count, 1] = state.Z0_c\n",
+    "    path = np.zeros((state.n+state.m, 2), dtype=int)\n",
+    "    path[0, 0] = state.pr\n",
+    "    path[0, 1] = state.pc\n",
     "\n",
+    "    # It's like the augmenting path algorithm. \n",
     "    while True:\n",
     "        row = np.argmax(state.marked[:, path[count, 1]] == 1)\n",
     "        if state.marked[row, path[count, 1]] != 1:\n",
@@ -60,7 +55,6 @@
     "            count += 1\n",
     "            path[count, 0] = row\n",
     "            path[count, 1] = path[count - 1, 1]\n",
-    "\n",
     "        col = np.argmax(state.marked[path[count, 0]] == 2)\n",
     "        if state.marked[row, col] != 2:\n",
     "            col = -1\n",
@@ -68,50 +62,46 @@
     "        path[count, 0] = path[count - 1, 0]\n",
     "        path[count, 1] = col\n",
     "\n",
-    "    for i in range(count + 1):\n",
+    "    for i in range(count+1):\n",
     "        if state.marked[path[i, 0], path[i, 1]] == 1:\n",
     "            state.marked[path[i, 0], path[i, 1]] = 0\n",
     "        else:\n",
     "            state.marked[path[i, 0], path[i, 1]] = 1\n",
     "\n",
-    "    state.clean_covers()\n",
+    "    state.row_uncovered[:] = True\n",
+    "    state.col_uncovered[:] = True\n",
     "    state.marked[state.marked == 2] = 0\n",
     "    return step3\n",
     "\n",
     "def step4(state):\n",
-    "    # Accelerate\n",
     "    C = (state.cm == 0).astype(int)\n",
-    "    covered_C = C * state.row_uncovered[:, np.newaxis]\n",
-    "    covered_C *= np.asarray(state.col_uncovered, dtype=int)\n",
+    "    covered_C = C * np.outer(state.row_uncovered, state.col_uncovered)\n",
     "    \n",
     "    while True:\n",
-    "        row, col = np.unravel_index(np.argmax(covered_C), (state.cm.shape[0], state.cm.shape[1]))   # find 0s\n",
-    "        if covered_C[row, col] == 0:\n",
-    "            return step6\n",
-    "        else:\n",
+    "        row, col = np.unravel_index(np.argmax(covered_C), (state.n, state.m))   # find noncovered 0s\n",
+    "        if covered_C[row, col] == 1:\n",
     "            state.marked[row, col] = 2\n",
-    "            star_col = np.argmax(state.marked[row] == 1)\n",
-    "            if state.marked[row, star_col] != 1:\n",
-    "                state.Z0_r = row\n",
-    "                state.Z0_c = col\n",
+    "            star_col = np.where(state.marked[row] == 1)[0]\n",
+    "            if star_col.size == 0:\n",
+    "                state.pr = row\n",
+    "                state.pc = col\n",
     "                return step5\n",
     "            else:\n",
-    "                col = star_col\n",
-    "                state.row_uncovered[row] = False    # change the assignment\n",
+    "                col = star_col[0]\n",
+    "                state.row_uncovered[row] = False\n",
     "                state.col_uncovered[col] = True\n",
-    "                covered_C[:, col] = C[:, col] * (np.asarray(state.row_uncovered, dtype=int))\n",
-    "                covered_C[row] = 0\n",
-    "\n",
+    "                covered_C = C * np.outer(state.row_uncovered, state.col_uncovered)\n",
+    "        else:   # finish the finding process\n",
+    "            return step6\n",
+    "            \n",
     "def step3(state):\n",
     "    starred = (state.marked == 1)\n",
     "    state.col_uncovered[np.any(starred, axis=0)] = False \n",
-    "\n",
-    "    if starred.sum() < state.cm.shape[0]:\n",
+    "    if np.sum(~state.col_uncovered) < state.n:\n",
     "        return step4\n",
     "\n",
-    "# Based on https://brc2.com/the-algorithm-workshop/\n",
+    "# Based on https://brc2.com/the-algorithm-workshop/ where the demo code is more important\n",
     "def my_hungarian(cost_matrix):\n",
-    "    cost_matrix = np.asarray(cost_matrix)\n",
     "    # Step 0\n",
     "    flag = False\n",
     "    if cost_matrix.shape[1] < cost_matrix.shape[0]:\n",
@@ -121,30 +111,29 @@
     "    state = State(cost_matrix)\n",
     "\n",
     "    # Step 1\n",
-    "    state.cm -= state.cm.min(axis=1)[:, np.newaxis]\n",
+    "    state.cm = state.cm - state.cm.min(axis=1, keepdims=True)\n",
     "\n",
     "    # Step 2\n",
     "    for i, j in zip(*np.where(state.cm == 0)):\n",
-    "        if state.col_uncovered[j] and state.row_uncovered[i]:\n",
+    "        if state.row_uncovered[i] and state.col_uncovered[j]:\n",
     "            state.marked[i, j] = 1\n",
     "            state.col_uncovered[j] = False\n",
     "            state.row_uncovered[i] = False\n",
-    "    \n",
-    "    state.clean_covers()\n",
-    "    \n",
+    "    state.row_uncovered[:] = True\n",
+    "    state.col_uncovered[:] = True\n",
+    "\n",
     "    step = step3\n",
     "    while step is not None:\n",
     "        step = step(state)\n",
     "\n",
-    "    marked = state.marked\n",
     "    if flag:\n",
-    "        marked = state.marked.T\n",
-    "    return np.where(marked == 1)\n"
+    "        return np.where(state.marked.T == 1)\n",
+    "    return np.where(state.marked == 1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +199,7 @@
     "\n",
     "            # Calculate distances between predictions and detections\n",
     "            cost_matrix = np.linalg.norm(predicted_positions[:, np.newaxis] - centroids_np, axis=2)\n",
-    "            print(cost_matrix.shape)\n",
+    "            # print(cost_matrix.shape)\n",
     "            \n",
     "            # Find the optimal assignment\n",
     "            # row_ind, col_ind = linear_sum_assignment(cost_matrix)   # already Hungarian\n",
@@ -271,262 +260,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(6, 5)\n",
-      "(7, 7)\n",
-      "(8, 7)\n",
-      "(8, 7)\n",
-      "(9, 7)\n",
-      "(9, 7)\n",
-      "(10, 6)\n",
-      "(10, 7)\n",
-      "(10, 9)\n",
-      "(12, 7)\n",
-      "(12, 7)\n",
-      "(12, 7)\n",
-      "(12, 6)\n",
-      "(12, 7)\n",
-      "(12, 7)\n",
-      "(12, 8)\n",
-      "(12, 7)\n",
-      "(12, 8)\n",
-      "(12, 9)\n",
-      "(12, 8)\n",
-      "(12, 6)\n",
-      "(12, 6)\n",
-      "(12, 5)\n",
-      "(12, 4)\n",
-      "(12, 4)\n",
-      "(12, 4)\n",
-      "(12, 5)\n",
-      "(13, 7)\n",
-      "(13, 6)\n",
-      "(13, 6)\n",
-      "(13, 8)\n",
-      "(13, 6)\n",
-      "(13, 7)\n",
-      "(13, 7)\n",
-      "(13, 5)\n",
-      "(13, 5)\n",
-      "(13, 6)\n",
-      "(13, 5)\n",
-      "(13, 5)\n",
-      "(13, 6)\n",
-      "(13, 6)\n",
-      "(13, 7)\n",
-      "(13, 4)\n",
-      "(13, 4)\n",
-      "(13, 6)\n",
-      "(13, 6)\n",
-      "(13, 9)\n",
-      "(13, 7)\n",
-      "(13, 7)\n",
-      "(13, 6)\n",
-      "(13, 7)\n",
-      "(13, 7)\n",
-      "(13, 7)\n",
-      "(13, 8)\n",
-      "(13, 5)\n",
-      "(13, 5)\n",
-      "(13, 6)\n",
-      "(13, 7)\n",
-      "(13, 8)\n",
-      "(13, 7)\n",
-      "(13, 8)\n",
-      "(14, 8)\n",
-      "(14, 9)\n",
-      "(14, 8)\n",
-      "(14, 7)\n",
-      "(14, 7)\n",
-      "(14, 6)\n",
-      "(14, 7)\n",
-      "(14, 6)\n",
-      "(14, 6)\n",
-      "(14, 6)\n",
-      "(14, 5)\n",
-      "(14, 5)\n",
-      "(14, 4)\n",
-      "(14, 3)\n",
-      "(14, 5)\n",
-      "(14, 4)\n",
-      "(14, 6)\n",
-      "(15, 5)\n",
-      "(15, 4)\n",
-      "(15, 5)\n",
-      "(15, 6)\n",
-      "(15, 5)\n",
-      "(15, 7)\n",
-      "(15, 6)\n",
-      "(15, 5)\n",
-      "(15, 6)\n",
-      "(15, 4)\n",
-      "(15, 4)\n",
-      "(15, 5)\n",
-      "(15, 3)\n",
-      "(15, 4)\n",
-      "(15, 4)\n",
-      "(15, 4)\n",
-      "(15, 4)\n",
-      "(15, 4)\n",
-      "(15, 4)\n",
-      "(15, 4)\n",
-      "(15, 5)\n",
-      "(15, 5)\n",
-      "(15, 5)\n",
-      "(15, 4)\n",
-      "(15, 5)\n",
-      "(15, 6)\n",
-      "(15, 6)\n",
-      "(15, 7)\n",
-      "(15, 6)\n",
-      "(15, 6)\n",
-      "(15, 8)\n",
-      "(15, 7)\n",
-      "(15, 8)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 6)\n",
-      "(15, 7)\n",
-      "(15, 8)\n",
-      "(15, 8)\n",
-      "(15, 8)\n",
-      "(15, 7)\n",
-      "(15, 6)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 6)\n",
-      "(15, 7)\n",
-      "(15, 8)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 7)\n",
-      "(15, 8)\n",
-      "(16, 7)\n",
-      "(16, 7)\n",
-      "(16, 7)\n",
-      "(16, 7)\n",
-      "(16, 8)\n",
-      "(16, 7)\n",
-      "(16, 6)\n",
-      "(16, 7)\n",
-      "(16, 6)\n",
-      "(16, 7)\n",
-      "(16, 6)\n",
-      "(16, 6)\n",
-      "(16, 6)\n",
-      "(16, 6)\n",
-      "(16, 6)\n",
-      "(16, 6)\n",
-      "(16, 7)\n",
-      "(16, 7)\n",
-      "(16, 8)\n",
-      "(17, 8)\n",
-      "(17, 6)\n",
-      "(17, 8)\n",
-      "(17, 8)\n",
-      "(17, 8)\n",
-      "(17, 8)\n",
-      "(17, 7)\n",
-      "(17, 7)\n",
-      "(17, 6)\n",
-      "(17, 7)\n",
-      "(17, 6)\n",
-      "(17, 5)\n",
-      "(17, 5)\n",
-      "(17, 5)\n",
-      "(17, 5)\n",
-      "(17, 4)\n",
-      "(17, 5)\n",
-      "(17, 4)\n",
-      "(17, 6)\n",
-      "(17, 7)\n",
-      "(18, 6)\n",
-      "(18, 7)\n",
-      "(18, 7)\n",
-      "(18, 8)\n",
-      "(18, 7)\n",
-      "(18, 7)\n",
-      "(18, 6)\n",
-      "(18, 6)\n",
-      "(18, 5)\n",
-      "(18, 7)\n",
-      "(18, 7)\n",
-      "(18, 6)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 6)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 6)\n",
-      "(18, 6)\n",
-      "(18, 6)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 5)\n",
-      "(18, 8)\n",
-      "(18, 7)\n",
-      "(18, 8)\n",
-      "(18, 8)\n",
-      "(18, 8)\n",
-      "(18, 8)\n",
-      "(18, 7)\n",
-      "(18, 7)\n",
-      "(18, 6)\n",
-      "(18, 6)\n",
-      "(18, 9)\n",
-      "(19, 8)\n",
-      "(19, 7)\n",
-      "(19, 8)\n",
-      "(19, 8)\n",
-      "(19, 9)\n",
-      "(19, 8)\n",
-      "(19, 8)\n",
-      "(19, 7)\n",
-      "(19, 8)\n",
-      "(19, 8)\n",
-      "(19, 8)\n",
-      "(19, 8)\n",
-      "(19, 8)\n",
-      "(19, 8)\n",
-      "(19, 8)\n",
-      "(20, 8)\n",
-      "(20, 6)\n",
-      "(20, 7)\n",
-      "(20, 7)\n",
-      "(20, 7)\n",
-      "(20, 7)\n",
-      "(20, 7)\n",
-      "(20, 7)\n",
-      "(20, 7)\n",
-      "(20, 7)\n",
-      "(20, 7)\n",
-      "(20, 6)\n",
-      "(20, 7)\n",
-      "(20, 7)\n",
       "Successfully saved in part_2_frame_dict.json!\n"
      ]
     },
