--- a/part_1.ipynb
+++ b/part_1.ipynb
@@ -5,7 +5,9 @@
    "id": "57bb12a1-0549-4360-8e39-7d84b8f8a359",
    "metadata": {},
    "source": [
-    "### Part 1"
+    "### Part 1  \n",
+    "\n",
+    "Ziye Chen, Hao Qi, Seunghwan Hyun"
    ]
   },
   {
