--- a/part_2.ipynb
+++ b/part_2.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Part 2"
+    "### Part 2  \n",
+    "\n",
+    "Ziye Chen, Hao Qi, Seunghwan Hyun"
    ]
   },
   {
